welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:20: error: not found: value faireV
	faireV(Color.red)
        ^PatternPicture:21: error: not found: value faireV
	faireV(Color.blue)
        ^PatternPicture:22: error: not found: value faireV
	faireV(Color.green)
        ^PatternPicture:23: error: not found: value faireV
	faireV(Color.yellow)
        ^