welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def fairev(c:Color){setCouleurBrosse(c)
	avance()
	setCouleurBrosse(Color.RED)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance(3)
     gauche()
	
}
def faireMotif(){
	faireV(Color.red)
	faireV(Color.blue)
	faireV(Color.green)
	faireV(Color.yellow)
}
override def run() {faireMotif()
}
